--- a/client/hackerList/hackerList.html
+++ b/client/hackerList/hackerList.html
@@ -8,12 +8,16 @@
 
   <div class="row">
     <div class="col-xs-4 col-xs-offset-4">
+    
       {{ #each Hackers }}
+         {{#if createdByUser}}
         <h4>{{ hackerName }}</h4>
         <p><strong>Legal Name:</strong> {{ legalName }}</p>
         <p><strong>Email:</strong> {{ email }}</p>
         <br />
+          {{/if}}
       {{ /each }}
+  
     </div>
   </div>
 </template>
